...
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:padding="10dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/help_ok_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:text="@string/ok" />
...
