<resources>
    <string name="app_name">Songle</string>
    <string name="help">"?"</string>
    <string name="level">Level 2</string>
    <string name="new_song">New Song</string>
    <string name="incomplete_songs">Incomplete songs:</string>
    <string name="incomplete_song">Song</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activityerfd">Map</string>
    <string name="instructions">
    Move around the map and collect words by clicking on nearby markers.\n\nMarkers on the map have
...
        will become.
    As you increase your level, the game will become harder.\n\nFor every 1km you walk, you will
        receive a Songle coin.
    You can use your Songle coins to reveal 10 random words on a song of your choice.\n\nSaving:\nTo
        save your progress in a song, simply return to the main menu.
    </string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blob">blob</string>
    <string name="title_activity_guess_song">Guess the Song!</string>
    <string name="action_settings">Settings</string>
    <string name="congratulations">Congratulations! You guessed the song correctly.</string>
...
