<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.songle.GuessSong"
    tools:showIn="@layout/activity_guess_song"
    android:id="@+id/scroll_view_guess_song">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/number_of_coins_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="You have 0 Songle coins available."
            android:textSize="18sp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The words you have collected so far:\n"
            android:textSize="18sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/lyrics_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="30dp"
            android:id="@+id/above_edit_text_guess"/>

        <EditText
            android:id="@+id/song_guess_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your guess here."
            android:layout_marginBottom="30dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <Button
            android:id="@+id/song_guess_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:onClick="submitGuess"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
