...
            android:layout_gravity="bottom|right"
            app:layout_dodgeInsetEdges="bottom"
            android:clipChildren="false"
            android:clipToPadding="false">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_guess_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:src="@drawable/ic_music_note_white_48px"
                app:backgroundTint="@color/colorAccent"
                android:layout_marginRight="16dp"
...
