<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/incomplete_song_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:weightSum="100">

...
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_weight="99.99" />

        <Button
            android:id="@+id/list_item_give_up"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle_button"
            android:foreground="@drawable/give_up_icon"
...
